2002-01-09  Elliot Glaysher  <glaysher@umich.edu>

	* debian/control: Added a netcomics-comicpage package to be created.
	This package is optional and is the only package that depends on 
	Gnome/GTK+.
	* debian/netcomics-comicpage.files: Initial commit. 
	* debian/netcomics.files: Explicitly state which files need to go here.
	* debian/netcomics-modules.dirs: Small corrections (so this pkg.
	actually has the netcomics modules in it (instead of netcomics!))
	* debian/netcomics-modules.files: ""
	* Netcomics/HTML.pm: Small cleanups to comments
	* Makefile.PL: Small changes to for cleaning up after package creation

2002-01-08  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspot (rpg): Updated @extra list for rpg.

2002-01-04  Elliot Glaysher  <glaysher@umich.edu>

	* TODO: Removed index splitting item
	* Netcomics/HTML/Page.pm (generate): Detect whether we have index1.html
	or index.html.
	* Netcomics/HTML.pm (create_archive_webpages): Fixed small bug that was
	causing other comics to appear on one comics' archive page.

2001-12-29  Elliot Glaysher  <glaysher@umich.edu>

	* lib/megatokyo (megatokyo): Allow different filetypes in megatokyo.

2001-12-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/doodie (doodie): Added new items to missing list & fixed the
	comic matching expression so that it can grab filenames with extra
	dots in them.

2001-12-26  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Set.pm (create_set_of_pages): Fixed small bug in new
	multiple index page feature. (Purely my fault.)

2001-12-20  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Set.pm: Now can create multi-paged indexes.
	* Netcomics/HTML/Page.pm: Page.pm returns the index as a list that
	can be seperated out at the Set.pm level.
	* Netcomics/HTML/Themes/Default.pm: Created pre_body and post_body
	templates.
	* Netcomics/Config.pm.in: Added the variables $comics_per_index_page
	and $webpage_indexname_tmpl.